(executable
 (name pp)
 (modules pp)
 (libraries ppx_camlrack ppxlib))

(rule
 (targets test_sexp.actual.ml)
 (deps (:pp pp.exe) (:input test_sexp.ml))
 (action (run ./%{pp} --impl %{input} -o %{targets})))

(rule
 (targets test_spat.actual.ml)
 (deps (:pp pp.exe) (:input test_spat.ml))
 (action (run ./%{pp} --impl %{input} -o %{targets})))

(rule
 (alias runtest)
 (package ppx_camlrack)
 (action (diff test_sexp.expected.ml test_sexp.actual.ml)))

(rule
 (alias runtest)
 (package ppx_camlrack)
 (action (diff test_spat.expected.ml test_spat.actual.ml)))

(test
 (name test_sexp)
 (modules test_sexp)
 (libraries camlrack)
 (preprocess (pps ppx_camlrack)))

(test
 (name test_spat)
 (modules test_spat)
 (libraries camlrack)
 (preprocess (pps ppx_camlrack)))
